# finance

./: .env  .gitignore  AGENTS.md  Dockerfile  README.md  Taskfile.yml  add_account.py  add_ticker.py  amortize_pal.py  app.py  app_echarts.py  authorization.py  balance_etfs.py  brokerages.py  build.sh  buy_stock.py  commodities.py  common.py  conda.env.export  conda.investing.export  create_duckdb.py  cron_daily.sh  cron_hourly.sh  cron_script.sh  daily_docker.sh  dashboard.py  docker-compose.yml  docker_start.sh  environment-firefox.yml  environment-ledger.yml  environment.yml  etfs.py  fedfunds.py  finance_daily.py  finance_hourly.py  finance_weekly.py  find_collar_options.py  forex.py  futures.py  graph_generator.py  (+45 more)
examples/: ledger.ledger
experiments/: highcharts_graphs.py
