[project]
name = "accounts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.5.2",
    "browser-use-sdk>=2.0.15",
    "cyclopts>=3.11.1",
    "duckdb>=1.2.1",
    "fredapi>=0.5.2",
    "humanize>=4.12.3",
    "kaleido>=1.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "nicegui>=2.12.1",
    "pandas>=2.3.3",
    "plotly>=6.0.0",
    "prefixed>=0.9.0",
    "pytest-playwright>=0.7.0",
    "requests>=2.32.5",
    "schwab-py>=1.5.0",
    "valkey[libvalkey]>=6.1.0",
    "walrus>=0.9.5",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250827",
    "pytest>=8.3.5",
    "pyright>=1.1.396",
    "ruff>=0.15.1",
]
